# S22_Mariglen_Jahaj

./: .gitignore  CMakeLists.txt  Spring22.sln  unique.txt
Game/: CMakeLists.txt  Events.cpp  Events.h  Game.h  Game.vcxproj  Game.vcxproj.filters  GameApp.cpp  GameApp.h  GameUtil.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h  pch.h
Game/Assets/Shaders/: defaultFragment.glsl
Game/specificGLFW/: GlfwWindow.cpp  GlfwWindow.h
Game/specificOpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
Spring22/: CMakeLists.txt  Entity.cpp  Entity.h  Spring22.vcxproj  Spring22.vcxproj.filters  SpringApp.cpp  SpringApp.h  main.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
